# SRB-C

./: CMakeLists.txt  readme.md
src/: d_main.c  d_main.h  g_game.c  g_game.h  m_menu.c  m_menu.h  srbdef.h  states.c  states.h  v_video.c  v_video.h
src/interface/: i_system.h  i_video.h  mixer_sound.h
src/interface/sdl2/: i_main.c  i_system.c  i_video.c  mixer_sound.c
